feat: added SGShardedBackup